# prediction_nba_careers

./: .gitignore  .pylintrc  CHANGELOG.md  Makefile  README.md  pyproject.toml
conf/base/: catalog.yml  globals.yml  logging.yml  mlflow.yml
conf/base/parameters/: base.yml  hyperparameters_tuning.yml  processing.yml  training.yml
conf/local/: catalog.yml  globals.yml
data/01_model_input/demo/: inference.final_dataset.csv  train.final_dataset.csv
notebooks/: create_datasets.ipynb
qtracker/: __init__.py  main.py  pipeline_registry.py  settings.py
qtracker/evaluation/: __init__.py  custom_metrics.py  distribution_plot.py
qtracker/interpretability/: __init__.py  feature_importance.py  shap_importance.py
qtracker/pipelines/data_science/: __init__.py  pipeline.py
qtracker/pipelines/data_science/nodes/: evaluation.py  hyperparameters_tuning.py  inference.py  interpretability.py  training.py
qtracker/utils/: __init__.py  helper_functions.py  kedro_hooks.py
