[tool]

[tool.kedro]
package_name = "qtracker"
source_dir = "."
project_name = "qtracker"
kedro_init_version = "0.18.8"

[tool.poetry]
name = "qtracker"
version = "0.0.0"
description = "Library to perform hyperparameters tuning"
authors = ["Quinten-Health <p.godbillot@quinten-health.com>"]
# include = [""]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
scikit-learn = "^1.2.0"
pandas = "^1.5.3"
numpy = "^1.23.5"
xgboost = "==1.7.4"
lightgbm = "^3.3.5"
catboost = "^1.1.1"
matplotlib = "^3.6.1"
seaborn = "^0.11.2"
mlflow = "==2.3.0"
kedro = "==0.18.8"
kedro-mlflow = "==0.11.8"
optuna = "==3.1.1"
optuna-dashboard = "==0.9.2"
optuna-fast-fanova = "==0.0.4"
kaleido = "==0.2.1"
gunicorn = "^20.1.0"
shapash = "^2.3.0"
tqdm = "^4.64.1"
llvmlite = "^0.39.0"
numba = "^0.56.0"
s3fs = "^2022.11.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.1"
pytest-cov = "^2.11.1"
pylint = "~2.13.7"
black = "^22.1.0"
pdbpp = "^0.10.2"
coverage = {version = "^6.0.2", extras = ["toml"]}
# jupytext = "1.14.4"

[tool.poetry.group.dev.dependencies]
ipython = "^8.11.0"
jupyterlab = "^3.6.2"
kedro-viz = "^6.0.1"
black = {version = "^22.10.0", allow-prereleases = true}

# [tool.jupytext.formats]
# "notebooks/" = "ipynb"
# "notebooks_scripts/" = "py:percent"

[tool.pytest.ini_options]
testpaths = [
  "tests",
]
addopts = "--cov --cov-report term --cov-report xml"

[tool.coverage.run]
branch = true
source = ["qtracker"]
omit = ["**/test*.py"]

[tool.coverage.xml]
output = "reports/cover.xml"

[tool.black]
line-length = 120
target-versions = ['py310']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | build
    | dist
    | notebooks
    | notebooks_scripts
  )/
)
'''

[tool.isort]
profile = "black"

[[tool.poetry.source]]
name = "pypi.org"
url = "https://pypi.org/simple"
secondary = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
